# simgame

./: .gitignore  Cargo.toml  log_cfg.env  rustfmt.toml
blocks/: Cargo.toml
blocks/src/: block_data.rs  config.rs  core.rs  lib.rs  octree.rs  primitive.rs  ray.rs  update.rs  util.rs
core/: Cargo.toml
core/src/: block.rs  files.rs  lib.rs  octree.rs  ray.rs  settings.rs  util.rs  world.rs  worldgen.rs
core/src/block/: index_utils.rs
core/src/data/debug_saves/small/: world_meta.yaml
core/src/octree/: tests.rs
core/src/worldgen/: primitives.rs
data/: Makefile  core_config.yaml  gimp_to_pdf.scm  renderdoc_settings.cap
data/resources/shader/: blocks_compute.glsl  blocks_fragment.glsl  blocks_vertex.glsl  gui_fragment.glsl
data/resources/shader/blocks/: fragment.glsl  vertex.glsl
data/resources/shader/mesh/: fragment.glsl  vertex.glsl
data/resources/shader/voxels/: compute.glsl  fragment.glsl  vertex.glsl
data/resources/shaders/: blocks_vertex.glsl  gui_vertex.glsl
data/resources_bin/shader/blocks/: compute.spirv  fragment.spirv  vertex.spirv
data/resources_bin/shader/mesh/: fragment.spirv  vertex.spirv
data/resources_bin/shader/voxels/: compute.spirv  fragment.spirv  vertex.spirv
data/resources_bin/shaders/: blocks_compute.spirv  blocks_fragment.spirv  gui_fragment.spirv  gui_vertex.spirv
data/resources_src/tex/block/: dirt.xcf  grass_top.xcf  leaf.xcf  rock.xcf  wood.xcf
data/resources_src/tex/entity/: bottom.xcf
data/resources_src/tex/entity/goblin/: head_back.xcf  head_front.xcf  head_left.xcf
data/resources_src/tex/voxel/: grass_side.xcf
data/resources_src/tex/voxels/: dirt.xcf  grass_side.xcf
data/shader_spirv/: comp_block_vertices.glsl.spirv  vert_partial.glsl.spirv
data/shader_src/: comp_block_vertices.glsl  frag.glsl  vert_full.glsl  vert_partial.glsl
render/: Cargo.toml
render/src/: assets.rs  buffer_util.rs  gui.rs  lib.rs  main.rs  mesh.rs  pipelines.rs  resource.rs  shader.frag  shader.vert  shaders.rs  stable_map.rs  test.rs  triangulate.rs  view.rs  voxels.rs  world.rs
render/src/mesh/: cube.rs  half_open_cube.rs  sphere.rs
render/src/pipelines/: gui.rs  mesh.rs  voxels.rs
render/src/pipelines/voxels/: chunk_state.rs  voxel_info.rs
render/src/voxels/: chunk_state.rs  voxel_info.rs
render/src/world/: blocks.rs  voxels.rs
render/src/world/blocks/: block_info.rs  chunk_state.rs
render/src/world/voxels/: chunk_state.rs  voxel_info.rs
shaders/: Cargo.toml  build.rs.bak  comp_block_vertices.glsl  shader.frag  shader.vert  vert_partial.glsl
shaders/src/: lib.rs  lib.rs.bak
simgame/: Cargo.toml  build.rs
simgame/assets/: Makefile  gimp_to_pdf.scm
simgame/assets/shader/: example.frag_glsl  example.vert_glsl
simgame/assets/shader/mesh/: vertex.glsl
simgame/assets/shader/voxels/: compute.compute_glsl  fragment.frag_glsl  vertex.vert_glsl
simgame/assets/src/tex/entity/: top.xcf
simgame/assets/src/tex/entity/dwarf/: head_front.xcf  head_right.xcf
simgame/shader/: shader.frag
simgame/src/: bevy.rs  controls.rs  files.rs  lib.rs  main.rs  settings.rs  world_state.rs
types/: Cargo.toml
types/src/: config.rs  entity.rs  lib.rs  mesh.rs  model.rs
types/src/mesh/: cube.rs
util/: Cargo.toml
util/src/: background_object.rs  bounds.rs  bsp.rs  float_octree.rs  lib.rs  octree.rs  ray.rs  stable_map.rs
util/src/float_octree/: tests.rs
util/src/octree/: tests.rs
voxels/: Cargo.toml
voxels/src/: config.rs  core.rs  index_utils.rs  lib.rs  octree.rs  primitive.rs  update.rs  voxel_data.rs
world/: Cargo.toml
world/src/: background_object.rs  behavior.rs  component.rs  handle.rs  lib.rs  lsystem.rs  state.rs  tree.rs  turtle.rs  world_state.rs  worldgen.rs
world/src/world_state/: background.rs
worldgen/: Cargo.toml
worldgen/src/: lib.rs  lsystem.rs  primitive.rs  primitives.rs  tree.rs  turtle.rs
