[package]
name = "simgame_core"
version = "0.1.0"
authors = ["Bradley Hardy"]
edition = "2018"

[dependencies]
cgmath = { version = "0.17", features = ["serde"] }
byteorder = "1"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.10.2"
serde_yaml = "0.8"
directories = "2.0"
anyhow = "1.0"
lz4 = "1.23"
rand = "0.6"
log = "0.4"
env_logger = "0.7"
