[package]
name = "simgame_core"
version = "0.1.0"
authors = ["Bradley Hardy"]
edition = "2018"

[dependencies]
cgmath = { version = "*", features = ["serde"] }
byteorder = "*"
serde = { version = "*", features = ["derive"] }
serde_cbor = "*"
serde_yaml = "*"
directories = "*"
anyhow = "*"
lz4 = "*"
rand = "*"
log = "*"
