[package]
name = "simgame_render"
version = "0.1.0"
authors = ["Bradley Hardy"]
edition = "2018"

[dependencies]
simgame_core = { path = "../core" }
cgmath = "*"
directories = "*"
anyhow = "*"
log = "*"
raw-window-handle = "*"
zerocopy = "*"
rand = "*"

[dependencies.wgpu]
package = "wgpu"
version = "0.5"
git = "https://github.com/gfx-rs/wgpu-rs"
rev = "0c7c3afebb12bf411d6964887b85e5fd152057f5"
features = ["trace"]
