[package]
name = "simgame_render"
version = "0.1.0"
authors = ["Bradley Hardy"]
edition = "2018"

[features]
shader-compiler = ["shaderc"]

[dependencies]
simgame_util = { path = "../util" }
simgame_voxels = { path = "../voxels" }
simgame_types = { path = "../types" }
serde = { version = "1.0", features = ["derive"] }
cgmath = "0.17"
anyhow = "1.0"
log = "0.4"
raw-window-handle = "0.3"
zerocopy = "0.3"
rand = "0.7"
image = "0.23"
shaderc = { version = "0.6", optional = true }
byteorder = "*"
metrics = "0.12"

[dependencies.wgpu]
package = "wgpu"
version = "0.7"
features = ["trace"]
# git = "https://github.com/gfx-rs/wgpu-rs"
# rev = "8e4d0015862507027f3a6bd68056c64568d11366"
# features = ["trace"]
