[package]
name = "simgame_render"
version = "0.1.0"
authors = ["Bradley Hardy"]
edition = "2018"

[features]
shader-compiler = ["shaderc"]

[dependencies]
simgame_util = { path = "../util" }
simgame_voxels = { path = "../voxels" }
simgame_types = { path = "../types" }
serde = { version = "1.0", features = ["derive"] }
cgmath = "0.18"
anyhow = "1.0"
log = "0.4"
raw-window-handle = "0.3"
zerocopy = "0.3"
rand = "0.7"
image = "0.23"
shaderc = { version = "0.6", optional = true }
byteorder = "1.3"
metrics = "0.12"

[dependencies.wgpu]
package = "wgpu"
version = "0.8"
features = ["trace"]
