[package]
name = "simgame"
version = "0.1.0"
authors = ["Bradley Hardy <bradleyhardy@live.com>"]
edition = "2018"

[features]
shader-compiler = ["simgame_render/shader-compiler"]

[dependencies]
simgame_core = { path = "../core/" }
simgame_render = { path = "../render/" }
simgame_worldgen = { path = "../worldgen/" }
cgmath = "0.17"
structopt = "*"
env_logger = "0.7"
log = "0.4"
anyhow = "1.0"
smol = "0.1"
winit = "0.22"
rand = "0.7"
serde = "1.0"
serde_yaml = "0.8"
byteorder = "1.3"
directories = "3.0"
lz4 = "1.23"
