[package]
name = "simgame"
version = "0.1.0"
authors = ["Bradley Hardy <bradleyhardy@live.com>"]
edition = "2018"

[features]
default = ["simgame_render/shader-compiler"]

[dependencies]
simgame_util = { path = "../util/" }
simgame_blocks = { path = "../blocks/" }
simgame_world = { path = "../world/" }
simgame_render = { path = "../render/" }
cgmath = "0.17"
structopt = "*"
env_logger = "0.7"
log = "0.4"
anyhow = "1.0"
smol = "0.1"
winit = "0.22"
rand = "0.7"
serde = "1.0"
serde_yaml = "0.8"
byteorder = "1.3"
directories = "3.0"
lz4 = "1.23"
