[package]
name = "simgame"
version = "0.1.0"
authors = ["Bradley Hardy <bradleyhardy@live.com>"]
edition = "2018"

[features]
default = ["simgame_render/shader-compiler"]

[dependencies]
simgame_util = { path = "../util/" }
simgame_voxels = { path = "../voxels/" }
simgame_world = { path = "../world/" }
simgame_render = { path = "../render/" }
simgame_types = { path = "../types/" }
cgmath = "0.18"
structopt = "*"
env_logger = "0.7"
log = "0.4"
anyhow = "1.0"
smol = "0.1"
winit = "0.22"
rand = "0.7"
serde = "1.0"
serde_yaml = "0.8"
byteorder = "1.3"
directories = "3.0"
lz4 = "1.23"
metrics = "0.12"
metrics-core = "0.5"
hecs = "0.5"

[dependencies.metrics-runtime]
version = "0.13"
default-features = false
features = ["metrics-exporter-log", "metrics-observer-yaml"]
