[package]
name = "simgame_types"
version = "0.1.0"
authors = ["Bradley Hardy"]
edition = "2018"

[dependencies]
simgame_blocks = { path = "../blocks" }
simgame_util = { path = "../util" }
cgmath = { version = "0.17", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
