[package]
name = "simgame_voxels"
version = "0.1.0"
authors = ["Bradley Hardy"]
edition = "2018"

[dependencies]
simgame_util = { path = "../util" }
cgmath = { version = "0.18", features = ["serde"] }
byteorder = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_yaml = "0.8"
anyhow = "1.0"
rand = "0.7"
log = "0.4"
