[package]
name = "simgame_world"
version = "0.1.0"
authors = ["Bradley Hardy"]
edition = "2018"

[dependencies]
simgame_voxels = { path = "../voxels" }
simgame_util = { path = "../util" }
simgame_types = { path = "../types" }
cgmath = { version = "0.18", features = ["serde"] }
byteorder = "1.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
rand = "0.7"
log = "0.4"
crossbeam = "0.7"
metrics = "0.12"
