[package]
name = "simgame_worldgen"
version = "0.1.0"
authors = ["Bradley Hardy <bradleyhardy29@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simgame_blocks = { path = "../blocks/" }
simgame_world = { path = "../world/" }
rand = "0.7"
cgmath = "0.17"
log = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
